--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>Title</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
-  <script type="module" src="main.js" defer></script>
-  <!-- <script src="https://cdn.master.co/css"></script> -->
-</head>
-
-<body>
-</body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Title</title><meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="index.94fe0d9f.css"><script type="module" src="index.e61f07d4.js" defer></script></head><body> </body></html>
