--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><title>Title</title><meta name="description" content=""><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="stylesheet" href="index.94fe0d9f.css"><script type="module" src="index.2264c0bb.js" defer></script></head><body> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <title>Title</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  
+  <!-- <script src="https://cdn.master.co/css"></script> -->
+  <script type="module" crossorigin src="/assets/index.9bf56336.js"></script>
+  <link rel="stylesheet" href="/assets/index.de5557d9.css">
+</head>
+
+<body>
+</body>
+
+</html>
