--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   
   
   <!-- <script src="https://cdn.master.co/css"></script> -->
-  <script type="module" crossorigin src="/assets/index.9bf56336.js"></script>
-  <link rel="stylesheet" href="/assets/index.de5557d9.css">
+  <script type="module" crossorigin src="/Ankademin-Quiz/assets/index.9bf56336.js"></script>
+  <link rel="stylesheet" href="/Ankademin-Quiz/assets/index.de5557d9.css">
 </head>
 
 <body>
