add module which doesn't work for HMR anyway so it was a bit pointless

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
   <script type="module" src="main.js" defer></script>
+  <script type="module" src="buttonstyles.js" defer></script>
   <!-- <script src="https://cdn.master.co/css"></script> -->
 </head>
 
